--- a/project2.css
+++ b/project2.css
@@ -1,6 +1,7 @@
 body {
+
     background-color: #EEEEEE;
-    font-family: Helvetica;
+    font-family: Ariel;
 }
 
 #container {
@@ -10,6 +11,7 @@ body {
   margin-left: auto;
   margin-right: auto;
 
+
 }
 
 #header {
@@ -18,6 +20,7 @@ body {
   color: white;
   text-align: center;
   padding: 10px
+
 
 
 }
@@ -33,6 +36,7 @@ body {
   width: 180px;
   float: left;
   text-align: center;
+
 }
 
 #main {
@@ -43,6 +47,50 @@ body {
   background-color: blue;
   color: white;
   text-align: center;
+
+}
+
+#instructor1 {
+
+  width: 150px;
+  height: 150px;
+  background-color: #3399FF;
+  float: left;
+  margin: 5px auto;
+  color: black;
+
+}
+
+#instructor2 {
+
+  width: 150px;
+  height: 150px;
+  background-color: #00F5F5;
+  float: left;
+  margin: 5px auto;
+  color: black;
+
+
+}
+
+#instructor3 {
+
+  width: 150px;
+  height: 150px;
+  background-color: #B80000;
+  float: left;
+  margin: 5px auto;
+  color: black;
+}
+
+#instructor4 {
+
+  width: 150px;
+  height: 150px;
+  background-color: #FFFF33;
+  float: left;
+  margin: 5px auto;
+  color: black;
 }
 
 #footer {
