--- a/project2.css
+++ b/project2.css
@@ -1,68 +1,41 @@
-
 @import url(https://fonts.googleapis.com/css?family=Quicksand);
-
 body {
-
     background-color: #EEEEEE;
     font-family: "Quicksand";
 }
-
-#container {
-
+/*#container {
   background-color: white;
-  width: 800px;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
-
-
-}
+}*/
 
 #header {
-
   background-color: #66CCFF;
   color: white;
   text-align: center;
   padding: 10px
-
-
-
-
 }
-
 #content {
-
   padding: 10px 10px 10px 10px;
-
-
 }
 
-#queue {
-
+/*#queue {
   width: 250px;
   height: 500px;
   float: left;
   text-align: center;
-
-
-
 }
-
 #main {
-
   width: 500px;
   height: 500px;
   float: right;
   background-color: blue;
   color: white;
   text-align: center;
-
-
-
-
-}
+}*/
 
 #instructor1 {
-
   width: 70px;
   height: 70px;
   background-color: #3399FF;
@@ -76,12 +49,8 @@ body {
   border-color: white;
   border-radius: 50%;
   border-width: 2px;
-
-
 }
-
 #instructor2 {
-
   width: 70px;
   height: 70px;
   background-color: #00F5F5;
@@ -95,12 +64,8 @@ body {
   border-color: white;
   border-radius: 50%;
   border-width: 2px;
-
-
 }
-
 #instructor3 {
-
   width: 70px;
   height: 70px;
   background-color: #B80000;
@@ -114,12 +79,8 @@ body {
   border-color: white;
   border-radius: 50%;
   border-width: 2px;
-
-
 }
-
 #instructor4 {
-
   width: 70px;
   height: 70px;
   background-color: #FFFF33;
@@ -133,11 +94,8 @@ body {
   border-color: white;
   border-width: 2px;
   border-radius: 50%;
-
 }
-
 #instructor5 {
-
   width: 70px;
   height: 70px;
   background-color: #9966CC;
@@ -152,11 +110,8 @@ body {
   border-color: white;
   border-radius: 50%;
   border-width: 2px;
-
 }
-
 #footer {
-
   clear: both;
   padding: 10px;
   background-color: #999999;
@@ -166,17 +121,14 @@ body {
 
 
 @import "compass/css3";
-
-
-
 *, *:before, *:after {
   box-sizing: border-box;
 }
 
+
 html {
   overflow-y: scroll;
 }
-
 a {
   text-decoration:none;
   color:$main;
@@ -185,15 +137,15 @@ a {
     color:$main-dark;
   }
 }
-
-.form {
+/*.form {
   background:rgba($form-bg,.9);
   padding: 40px;
   max-width:600px;
   margin:40px auto;
   border-radius:$br;
   box-shadow:0 4px 10px 4px rgba($form-bg,.3);
-}
+}*/
+
 
 .tab-group {
   list-style:none;
@@ -204,6 +156,8 @@ a {
     display: table;
     clear: both;
   }
+
+
   li a {
     display:block;
     text-decoration:none;
@@ -231,7 +185,6 @@ a {
   display:none;
 }
 
-
 h1 {
   text-align:center;
   color:$white;
@@ -239,7 +192,7 @@ h1 {
   margin:0 0 40px;
 }
 
-label {
+/*label {
   position:absolute;
   transform:translateY(6px);
   left:13px;
@@ -253,7 +206,6 @@ label {
     color:$main;
   }
 }
-
 label.active {
   transform:translateY(50px);
   left:2px;
@@ -262,12 +214,12 @@ label.active {
     opacity:0;
   }
 }
-
 label.highlight {
   color:$white;
-}
+}*/
 
-input, textarea {
+
+.top-row input, #login-form input, textarea {
   font-size:20px;
   display:block;
   width:100%;
@@ -285,15 +237,17 @@ input, textarea {
   }
 }
 
-textarea {
+/*textarea {
   border:2px solid $gray-light;
   resize: vertical;
-}
+}*/
 
 .field-wrap {
   position:relative;
   margin-bottom:40px;
 }
+
+
 
 .top-row {
   &:after {
@@ -301,7 +255,6 @@ textarea {
     display: table;
     clear: both;
   }
-
   > div {
     float:left;
     width:48%;
@@ -311,7 +264,6 @@ textarea {
     }
   }
 }
-
 .button {
   border:0;
   outline:none;
@@ -329,18 +281,14 @@ textarea {
     background:$main-dark;
   }
 }
-
 .button-block {
   display:block;
   width:100%;
 }
-
 .forgot {
   margin-top:-20px;
   text-align:right;
 }
-
-
 .qbtnadd {
   background: #3498db;
   background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
@@ -358,7 +306,6 @@ textarea {
   text-decoration: none;
   float: left;
 }
-
 .qbtnadd:hover {
   background: #FF0033;
   background-image: -webkit-linear-gradient(top, #FF0033, #339900);
@@ -368,7 +315,6 @@ textarea {
   background-image: linear-gradient(to bottom, #339900, #339900);
   text-decoration: none;
 }
-
 .qbtnremove {
   background: #3498db;
   background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
@@ -386,7 +332,6 @@ textarea {
   text-decoration: none;
   float: right;
 }
-
 .qbtnremove:hover {
   background: #FF0033;
   background-image: -webkit-linear-gradient(top, #FF0033, #FF0033);
@@ -396,13 +341,12 @@ textarea {
   background-image: linear-gradient(to bottom, #FF0033, #FF0033);
   text-decoration: none;
 }
-
 .place-buttons {
   position: relative;
   top: 350px;
 }
-
 .qbtnext {
+  display: none;
   background: #000000;
   background-image: -webkit-linear-gradient(top, #000000, #396682);
   background-image: -moz-linear-gradient(top, #000000, #396682);
@@ -421,7 +365,6 @@ textarea {
   margin-top: 30px;
   margin-right: 20px;
 }
-
 .qbtnext:hover {
   background: #79f2de;
   background-image: -webkit-linear-gradient(top, #79f2de, #5585a6);
@@ -431,3 +374,90 @@ textarea {
   background-image: linear-gradient(to bottom, #79f2de, #5585a6);
   text-decoration: none;
 }
+
+
+
+
+
+
+
+
+
+
+
+/* styling overrides */
+
+
+#container {
+  background-color: white;
+  width: 80%;
+  margin: 40px auto;
+}
+
+
+#queue {
+  width: 40%;
+  height: 500px;
+  float: left;
+  text-align: center;
+}
+
+
+#main {
+  width: 58%;
+  height: 500px;
+  float: right;
+  background-color: blue;
+  color: white;
+  text-align: center;
+}
+
+
+.form {
+  background:rgba($form-bg,.9);
+  padding: 40px;
+  /*max-width:600px;*/
+  margin:40px auto;
+  border-radius:$br;
+  box-shadow:0 4px 10px 4px rgba($form-bg,.3);
+}
+
+
+.role {
+ /* position:absolute;*/
+  margin-bottom:40px;
+  height:100px;
+  /*border: 1px solid black;*/
+  /*overflow: auto;*/
+  z-index: 100;
+}
+
+
+#login {
+  margin-top: 40px;
+}
+
+
+.tab-content,  #login-form {
+  width: 60%;
+  margin: 0 auto;
+}
+
+fieldset {
+  border: none;
+}
+
+.student_instructor {
+  margin: 20px 0;
+  padding: 10px 0;
+}
+
+.student_instructor input {
+  display: inline-block;
+}
+
+.student_instructor label {
+  width: 40%;
+  display: inline-block;
+}
+
