--- a/project2.css
+++ b/project2.css
@@ -3,12 +3,12 @@ body {
     background-color: #EEEEEE;
     font-family: "Quicksand";
 }
-/*#container {
+#container {
   background-color: white;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-}*/
+}
 
 #header {
   background-color: #66CCFF;
@@ -20,7 +20,7 @@ body {
   padding: 10px 10px 10px 10px;
 }
 
-/*#queue {
+#queue {
   width: 250px;
   height: 500px;
   float: left;
@@ -33,7 +33,7 @@ body {
   background-color: blue;
   color: white;
   text-align: center;
-}*/
+}
 
 #in1 {
   width: 70px;
@@ -112,13 +112,10 @@ body {
   border-width: 2px;
 }
 
-#tom {
-  width: 70px;
-  height: 30px;
 
 
 
-}
+
 #footer {
   clear: both;
   padding: 10px;
